# echoes

./: .gitignore  AGENTS.md  LICENSE  PROFILE.md  README.md  install.sh  pyproject.toml  uninstall.sh
.agents/skills/echoes/: SKILL.md
.agents/skills/echoes/agents/: openai.yaml
.codex/: config.toml
references/: automation.md  compose-message.md  daily-codex-prompt.md  fetch-digest.md  generate-media.md  install.md  prepare.md  process-papers.md  rank-papers.md  researcher-profile.md  run-pipeline.md
scripts/: apply_ranking_review.py  check_notebooklm_auth.py  check_scholar_inbox_auth.py  dns_fallback.py  fetch_digest.py  generate_media.py  prepare_env.py  process_papers.py  rerank_papers.py  researcher_profile.py  run_daily_codex.sh  send_digest.py
tests/: test_apply_ranking_review.py  test_check_notebooklm_auth.py  test_check_scholar_inbox_auth.py  test_dns_fallback.py  test_fetch_digest.py  test_generate_media.py  test_install_script.py  test_prepare_env.py  test_process_papers.py  test_rerank_papers.py  test_researcher_profile.py  test_send_digest.py  test_uninstall_script.py
