[project]
name = "echoes"
version = "0.1.0"
description = "Codex-guided Scholar Inbox, NotebookLM, and Telegram research digest workflow"
requires-python = ">=3.10"
dependencies = [
  "notebooklm-py[browser]>=0.3.4,<0.4.0",
  "httpx[socks]>=0.27.0,<1.0.0",
  "python-telegram-bot>=21.0,<22.0",
  "pypdf>=5.0.0,<7.0.0",
  "requests>=2.32.0,<3.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pyyaml>=6.0.0,<7.0.0",
]

[tool.uv]
package = false
